fixed paragraph on mobile

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -19,7 +19,7 @@ h1 {
 .header-p {
     position: absolute;
     top: 55%;
-    left: 65px;
+    left: 0px;
     z-index: 2;
     color: white;
     font-size: 20px;
@@ -52,11 +52,12 @@ h1 {
     }
 
     .header-p {
-        position: relative; 
-        top: auto; 
-        margin-top: -90px;
+        position: absolute; 
+        top: 155px;
+        margin-top: 0px;
         font-size: 11px;
-        left: 25px;
+        left: 0px;
         width: 100%;
+        padding-left: 20px;
     }
 }
